--- a/_posts/2021/2021-02-09-令牌桶漏桶固定时间窗口滑动时间窗口.md
+++ b/_posts/2021/2021-02-09-令牌桶漏桶固定时间窗口滑动时间窗口.md
@@ -6,7 +6,6 @@ author: 薛师兄
 tags:
   - 算法
   - 网站架构
-score: private
 ---
 
 ## 前言
@@ -21,7 +20,7 @@ score: private
 
 漏桶算法思路很简单，水（请求）先进入到漏桶里，漏桶以一定的速度出水，当水流入速度过大会直接溢出，可以看出漏桶算法能强行限制数据的传输速率。
 
-![](./20210209令牌桶漏桶固定时间窗口滑动时间窗口/081225378155003.png)
+![图片来源网络](./20210209令牌桶漏桶固定时间窗口滑动时间窗口/081225378155003.png)
 
 但是这种算法的弊端是不支持某种程度上的流量突发情况，所以更多时候我们是选择“令牌桶算法”。
 
@@ -29,7 +28,7 @@ score: private
 
 令牌桶算法的原理是系统会以一个恒定的速度往桶里放入令牌，而如果请求需要被处理，则需要先从桶里获取一个令牌，当桶里没有令牌可取时，则拒绝服务。
 
-![](./20210209令牌桶漏桶固定时间窗口滑动时间窗口/081226107372877.png)
+![图片来源网络](./20210209令牌桶漏桶固定时间窗口滑动时间窗口/081226107372877.png)
 
 ### 固定时间窗口算法
 
