--- a/_posts/2021/2021-01-24-掌握一门脚本语言到底有多重要.md
+++ b/_posts/2021/2021-01-24-掌握一门脚本语言到底有多重要.md
@@ -3,7 +3,9 @@ layout: post
 title: 掌握一门脚本语言到底有多重要
 date: 2021-01-24 16:00:00
 author: 薛师兄
-tags: Shell,JavaScript
+tags: 
+  - Shell
+  - JavaScript
 ---
 
 不知道大家对我了解多少，其实我对 nodeJs 也略为了解。
