--- a/_posts/2021/2021-02-07-深入理解Java内存模型原理.md
+++ b/_posts/2021/2021-02-07-深入理解Java内存模型原理.md
@@ -3,7 +3,9 @@ layout: post
 title: 深入理解Java内存模型原理
 date: 2021-02-07 16:00:00
 author: 薛师兄
-tags: Java,JVM
+tags: 
+  - Java
+  - JVM
 ---
 
 ## 一、前言
