--- a/_posts/2019/2019-03-26-校招Java岗面试指南之我见.md
+++ b/_posts/2019/2019-03-26-校招Java岗面试指南之我见.md
@@ -4,7 +4,6 @@ title: 校招Java岗面试指南之我见
 date: 2019-03-26 11:38:00 +0800
 author: 薛师兄
 tags: 面经
-score: private
 ---
 ### 01│面试前的准备
 
@@ -100,10 +99,4 @@ ACID四个特性懂吧？让你解释也没问题吧？
 
 ### 07│本文结语
 
-后面，我一是想要分享自己对一些知识的感悟，一方面就是介绍一部分开发上的技术技能。
-
-最近确实加了不少同学，我也尽力给了帮助和指导。但是我还有自己的工作要做，一天到晚也没时间去看微信，同学们如果有问题想问我，可以前往我的知识星球发表提问，有时间我会统一回复，而且一些重复的问题大件都可以看得到。
-
-如果你觉得不错，可以顺手点一个好看，甚至给我赞赏，那将会更加的鼓励我更好的创作。
-
-![](./20190326我的面试宝典这些不会的话就别去面试了/17987201.png)
+如果你觉得不错，可以顺手给我赞赏，那将会更加的鼓励我更好的创作。
