--- a/_posts/2020/2020-07-10-逐行解读HashMap源码全文.md
+++ b/_posts/2020/2020-07-10-逐行解读HashMap源码全文.md
@@ -4,7 +4,6 @@ title: 逐行解读HashMap源码【全文】
 date: 2020-07-10 11:05:00
 author: 薛勤
 tags: Java
-score: private
 ---
 
 # 写在前面
@@ -15,7 +14,7 @@ score: private
 
 无论自己的领悟是深是浅，终归是自己的，无论别人的领悟多么高深，那也是别人的。希望每个读者都能有自己的收获和体会。
 
-由于 HashMap 源码中涉及到较多的位运算的知识，对这方面基础薄弱的读者可以阅读我之前发布在微信公众号“代码艺术”上的文章。
+由于 HashMap 源码中涉及到较多的位运算的知识，对这方面基础薄弱的读者可以阅读我之前发布的文章。
 
 ## Java版本
 
@@ -1342,7 +1341,7 @@ static <K,V> TreeNode<K,V> balanceDeletion(TreeNode<K,V> root,
 
 # 写在最后
 
-这篇逐行解读 HashMap 源码的文章到此终于结束！笔者从开始写下此文的前半部分到现在，已经过了半年，期间由于功力不足、时间有限一直断断续续。不过所幸，笔者始终没有放弃，坚持要写出一篇高质量的解读 HashMap 源码的文章。但是，笔者虽已完成大部分核心源码的解读，但受限于自身功力浅薄，未能写的尽善尽美，本文仍旧存有许多遗憾之处。如果有读者想对本文进行补充的话，欢迎通过微信公众号“代码艺术”联系我！
+这篇逐行解读 HashMap 源码的文章到此终于结束！笔者从开始写下此文的前半部分到现在，已经过了半年，期间由于功力不足、时间有限一直断断续续。不过所幸，笔者始终没有放弃，坚持要写出一篇高质量的解读 HashMap 源码的文章。但是，笔者虽已完成大部分核心源码的解读，但受限于自身功力浅薄，未能写的尽善尽美，本文仍旧存有许多遗憾之处。如果有读者想对本文进行补充的话，欢迎联系我！
 
 # 学习资源
 
