日志到底应该怎么打印

--- a/_posts/2021/2021-03-04-日志到底应该怎么打印.md
+++ b/_posts/2021/2021-03-04-日志到底应该怎么打印.md
@@ -10,7 +10,7 @@ tags:
 
 写代码的人就没有不写日志的，但我们到底该怎么打印日志，打印日志能不能有点章法?
 
-针对这个问题，我查阅了《阿里巴巴Java开发手册》，里面有 8 条日志规约。比如不同作用的日志存放到不同的日志文件里，以 appName_logType_logName.log 方式进行命名。是挺不错，但属于是日志分类的问题，依旧解决不了程序员如何有章法的在代码中书写日志的问题。
+针对这个问题，我查阅了《阿里巴巴Java开发手册》，里面有 8 条日志规约。比如不同作用的日志存放到不同的日志文件里，以`appName_logType_logName.log`方式进行命名。是挺不错，但属于是日志分类的问题，依旧解决不了程序员如何有章法的在代码中书写日志的问题。
 
 **探寻**
 
@@ -111,7 +111,7 @@ log.info("{}|ReqId={}|ID={}|结束执行业务逻辑|参数={}",EVENT_NAME, ReqI
 EVENT_NAME={}|ReqId={}|Key={}|childKey={}|doing something|result={} 
 ```
 
-如果没有过程的话，ReqId 是可以省略的，Key 的数量也不一定只是一个，你也可以看情况给日志加一列 [start|end] ，表示业务过程的开始和结束。
+如果没有过程的话，ReqId 是可以省略的，Key 的数量也不一定只是一个，你也可以看情况给日志加一列 `[start|end]` ，表示业务过程的开始和结束。
 
 **JSON日志**
 
