--- a/_posts/2020/2020-08-28-史上最全的Jackson使用教程.md
+++ b/_posts/2020/2020-08-28-史上最全的Jackson使用教程.md
@@ -8,17 +8,17 @@ tags: Jackson,Json,Java
 
 ## 简单介绍
 
-别再使用 fastJson 了！漏洞天天报，Bug 修不完。快来拥抱 Jackson 吧！
+别再使用 FastJson 了！漏洞天天报，Bug 修不完。快来拥抱 Jackson 吧！
 
-Jackson 是用来序列化和反序列化 json 的 Java 的开源框架。Spring MVC 的默认 json 解析器便是 Jackson。与其他 Java 的 json 的框架 Gson 等相比， Jackson 解析大的 json 文件速度比较快；Jackson 运行时占用内存比较低，性能比较好；Jackson 有灵活的 API，可以很容易进行扩展和定制。
+Jackson 是用来序列化和反序列化 JSON 的 Java 的开源框架。Spring MVC 的默认 JSON 解析器便是 Jackson。与其他 Java 的 JSON 的框架 Gson 等相比， Jackson 解析大的 JSON 文件速度比较快；Jackson 运行时占用内存比较低，性能比较好；Jackson 有灵活的 API，可以很容易进行扩展和定制。
 
 Jackson 的 1.x 版本的包名是 org.codehaus.jackson ，当升级到 2.x 版本时，包名变为 com.fasterxml.jackson，本文讨论的内容是基于最新的 Jackson 的 2.9.1 版本。
 
 Jackson 的核心模块由三部分组成。
 
-- jackson-core，核心包，提供基于"流模式"解析的相关 API，它包括 JsonPaser 和 JsonGenerator。Jackson 内部实现正是通过高性能的流模式 API 的 JsonGenerator 和 JsonParser 来生成和解析 json。
+- jackson-core，核心包，提供基于“流模式”解析的相关 API，它包括 JsonPaser 和 JsonGenerator。Jackson 内部实现正是通过高性能的流模式 API 的 JsonGenerator 和 JsonParser 来生成和解析 JSON。
 - jackson-annotations，注解包，提供标准注解功能；
-- jackson-databind ，数据绑定包， 提供基于"对象绑定" 解析的相关 API （ ObjectMapper ） 和"树模型" 解析的相关 API （JsonNode）；基于"对象绑定" 解析的 API 和"树模型"解析的 API 依赖基于"流模式"解析的 API。
+- jackson-databind ，数据绑定包， 提供基于“对象绑定”解析的相关 API （ ObjectMapper ） 和“树模型”解析的相关 API （JsonNode）；基于“对象绑定”解析的 API 和“树模型”解析的 API 依赖基于“流模式”解析的 API。
 
 在了解 Jackson 的概要情况之后，下面介绍 Jackson 的基本用法。
 
@@ -38,7 +38,7 @@ Jackson 的核心模块由三部分组成。
 
 ## 快速入门
 
-Jackson 最常用的 API 就是基于"对象绑定" 的 ObjectMapper。下面是一个 ObjectMapper 的使用的简单示例。
+Jackson 最常用的 API 就是基于“对象绑定”的 ObjectMapper。下面是一个 ObjectMapper 的使用的简单示例。
 
 准备一个名称为 Person 的 Java 对象：
 
@@ -77,7 +77,7 @@ public void test1() throws IOException {
 
 打印输出：
 
-```json
+```
 序列化
 {
   "name" : "Tom",
@@ -115,7 +115,7 @@ mapper.setDefaultPropertyInclusion(JsonInclude.Include.NON_DEFAULT);
 
 重新运行单元测试1，打印输出：
 
-```json
+```
 序列化
 {
   "name" : "Tom",
@@ -132,16 +132,16 @@ Jackson 根据它的默认方式序列化和反序列化 java 对象，若根据
 
 | 注解                  | 用法                                                         |
 | :-------------------- | :----------------------------------------------------------- |
-| @JsonProperty         | 用于属性，把属性的名称序列化时转换为另外一个名称。示例：@JsonProperty("birth_date") private Date birthDate |
+| @JsonProperty         | 用于属性，把属性的名称序列化时转换为另外一个名称。示例：`@JsonProperty("birth_date") private Date birthDate` |
 | @JsonIgnore           | 可用于字段、getter/setter、构造函数参数上，作用相同，都会对相应的字段产生影响。使相应字段不参与序列化和反序列化。 |
 | @JsonIgnoreProperties | 该注解是类注解。该注解在Java类和JSON不完全匹配的时候使用。   |
-| @JsonFormat           | 用于属性或者方法，把属性的格式序列化时转换成指定的格式。示例：@JsonFormat(timezone = "GMT+8", pattern = "yyyy-MM-dd HH:mm") public Date getBirthDate() |
-| @JsonPropertyOrder    | 用于类， 和 @JsonProperty 的index属性类似，指定属性在序列化时 json 中的顺序 ， 示例：@JsonPropertyOrder({ "birth_Date", "name" }) public class Person |
-| @JsonCreator          | 用于构造方法，和 @JsonProperty 配合使用，适用有参数的构造方法。示例：@JsonCreator public Person(@JsonProperty("name")String name) {…} |
-| @JsonAnySetter        | 用于属性或者方法，设置未反序列化的属性名和值作为键值存储到 map 中 @JsonAnySetter public void set(String key, Object value) { map.put(key, value); } |
-| @JsonAnyGetter        | 用于方法 ，获取所有未序列化的属性 public Map<String, Object> any() { return map; } |
-| @JsonNaming           | 类注解。序列化的时候该注解可将驼峰命名的字段名转换为下划线分隔的小写字母命名方式。反序列化的时候可以将下划线分隔的小写字母转换为驼峰命名的字段名。示例：@JsonNaming(PropertyNamingStrategy.SnakeCaseStrategy.class) |
-| @JsonRootName         | 类注解。需开启mapper.enable(SerializationFeature.WRAP_ROOT_VALUE)，用于序列化时输出带有根属性名称的 JSON 串，形式如 {"root_name":{"id":1,"name":"zhangsan"}}。但不支持该 JSON 串反序列化。 |
+| @JsonFormat           | 用于属性或者方法，把属性的格式序列化时转换成指定的格式。示例：`@JsonFormat(timezone = "GMT+8", pattern = "yyyy-MM-dd HH:mm") public Date getBirthDate()` |
+| @JsonPropertyOrder    | 用于类， 和 @JsonProperty 的index属性类似，指定属性在序列化时 json 中的顺序 ， 示例：`@JsonPropertyOrder({ "birth_Date", "name"}) public class Person` |
+| @JsonCreator          | 用于构造方法，和 @JsonProperty 配合使用，适用有参数的构造方法。示例：`@JsonCreator public Person(@JsonProperty("name")String name) {…}` |
+| @JsonAnySetter        | 用于属性或者方法，设置未反序列化的属性名和值作为键值存储到 map 中 `@JsonAnySetter public void set(String key, Object value) { map.put(key, value); }` |
+| @JsonAnyGetter        | 用于方法 ，获取所有未序列化的属性 `@JsonAnyGetter public Map<String, Object> any() { return map; }` |
+| @JsonNaming           | 类注解。序列化的时候该注解可将驼峰命名的字段名转换为下划线分隔的小写字母命名方式。反序列化的时候可以将下划线分隔的小写字母转换为驼峰命名的字段名。示例：`@JsonNaming(PropertyNamingStrategy.SnakeCaseStrategy.class)` |
+| @JsonRootName         | 类注解。需开启`mapper.enable(SerializationFeature.WRAP_ROOT_VALUE)`，用于序列化时输出带有根属性名称的 JSON 串，形式如 `{"root_name":{"id":1,"name":"zhangsan"}}`。但不支持该 JSON 串反序列化。 |
 
 使用示例：
 
@@ -215,7 +215,7 @@ public void test3() throws IOException {
 
 打印输出：
 
-```java
+```
 {
   "date" : "2020-07-26 19:28:44",
   "demoKey" : "demoValue",
@@ -309,7 +309,7 @@ private Module JavaTimeModule() {
 
 打印输出：
 
-```json
+```
 序列化
 {
   "name" : "Tom",
@@ -370,7 +370,7 @@ public void test5() throws IOException {
 
 打印输出：
 
-```json
+```
 序列化
 [ {
   "name" : "Tom",
@@ -430,7 +430,7 @@ public void test6() throws IOException {
 
 打印输出：
 
-```json
+```
 序列化
 {
   "key1" : {
@@ -472,7 +472,7 @@ JackSon 默认不是所有的属性都可以被序列化和反序列化。默认
 
 下面的示例使修饰符为 protected 的属性 name 也可以序列化和反序列化。
 
-```json
+```java
 public static class People {
     public int age;
     protected String name;
@@ -499,7 +499,7 @@ public void test7() throws IOException {
 
 打印输出：
 
-```json
+```
 序列化
 {
   "age" : 40,
@@ -553,7 +553,7 @@ public void test8() throws JsonProcessingException {
 
 打印输出：
 
-```json
+```
 {"name":"Tom","date":1595780842754}
 ```
 
@@ -676,7 +676,7 @@ public void test10() throws IOException {
 
 打印输出：
 
-```json
+```
 构建 ObjectNode:
 {"name":"Tom","age":40,"address":{"zip":"000000","street":"Road NanJing"}}
 查找子节点 name:
